# stickermap

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  compose.prod.yml  compose.yml  index.html  index.yaml  stickermap-1.17.0.tgz  stickermap-1.17.1.tgz  stickermap-1.17.2.tgz  stickermap-1.18.0.tgz  stickermap-1.19.0.tgz  stickermap-1.20.0.tgz  stickermap-1.21.0.tgz  stickermap-1.21.1.tgz  stickermap-1.21.2.tgz  stickermap-1.21.3.tgz  stickermap-1.21.4.tgz
.claude/: settings.json
.claude/agents/: frontend-feature.md  helm-values.md  migration-author.md
.claude/commands/: bump-version.md  check-rbac.md  realm-import.md
.claude/hooks/: sync-locks.py
.github/: dependabot.yml
.github/workflows/: backend-tests.yml  build-helm.yml  build-images.yml  bump-version.yml  publish-helm-pages.yml  tests.yml  update-uv-lock.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  connections.py  database_setup.py  dependencies.py  environment.py  file_handlers.py  logger.py  main.py  models.py  pyproject.toml
backend/core/: auth.py  connections.py  logger.py
backend/models/: sticker.py
backend/routers/: admin.py  categories.py  reports.py  stickers.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_file_handlers.py  test_models.py
database_migrations/: .dockerignore  Dockerfile  README.md  pyproject.toml
database_migrations/alembic/: env.py
database_migrations/alembic/versions/: 0001_initial_schema.py  0002_add_spotted_count.py  0003_add_updated_at.py  0004_add_indexes.py  0005_removal_reports.py  0006_categories.py  0007_private_sticker.py  0008_add_thumbnail.py
database_migrations/tests/: test_migrations.py
docs/: authentication.md  troubleshooting.md
frontend/: .dockerignore  Caddyfile  Dockerfile  README.md  angular.json  entrypoint.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
frontend/public/i18n/: en.json  nl.json
frontend/public/images/: bg-clouds.webm
frontend/src/: index.html  proxy.conf.json  styles.css  styles.scss
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/add-sticker-view/: add-sticker-view.component.css  add-sticker-view.component.html  add-sticker-view.component.scss  add-sticker-view.component.ts
frontend/src/environments/: environment.development.ts  environment.docker.ts  environment.ts
general/extra/: exiftest.py  migrate_data.py  stickermap-realm.json
general/extra/datasets/: single_sticker.json  stickers.json
general/keycloak_realm/: stickermap-realm.json
general/scripts/: bump-version.py  bump-version.sh
helm/: README.md
helm/stickermap/: Chart.yaml  values.yaml
helm/stickermap/files/: stickermap-realm.json
helm/stickermap/templates/: NOTES.txt  _helpers.tpl  http-redirect-middleware.yaml  ingress.yaml
(+134 files in other folders)
