[project]
name = "stickermap"
version = "1.12.0"
description = "Sticker location mapper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "exifread>=3.5.1",
    "fastapi>=0.136.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.2.0",
    "python-dotenv>=1.2.2",
    "PyJWT>=2.12.1",
    "cryptography>=48.0.0",
    "python-multipart>=0.0.27",
    "requests>=2.34.1",
    "uvicorn[standard]>=0.46.0",
]

[tool.uv]
constraint-dependencies = ["pygments>=2.20.0"]

[tool.ruff]
ignore = ["F541"]

[tool.pyright]
reportOperatorIssue = "none"
