[project]
name = "stickermap"
version = "1.21.4"
description = "Sticker location mapper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "exifread>=3.5.1",
    "fastapi[standard]>=0.136.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.2.0",
    "python-dotenv>=1.2.2",
    "PyJWT>=2.13.0",
    "cryptography>=48.0.1",
    "python-multipart>=0.0.31",
    "requests>=2.34.1",
]

[tool.uv]
constraint-dependencies = ["pygments>=2.20.0", "starlette>=1.0.1", "pydantic-settings>=2.14.2"]

[tool.ruff]
lint.ignore = ["F541"]

[tool.pyright]
reportOperatorIssue = "none"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
