[project]
name = "stickermap-migrations"
version = "1.3.4"
description = "Database migrations for StickerMap"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
