[project]
name = "stickermap-migrations"
version = "1.6.0"
description = "Database migrations for StickerMap"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.49",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
constraint-dependencies = ["pygments>=2.20.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
